Place ellipsis correctly when inline has relative offset

Bug: 737837
Change-Id: I66c848299a93b2b796f2f831d9237f41aa50e962