third_party/WebKit/Source/core/layout/line/RootInlineBox.h
@@ -36,6 +36,8 @@ class LineLayoutBlockFlow;
 
 struct BidiStatus;
 
+enum ForceEllipsisOnLine { DoNotForceEllipsis, ForceEllipsis };
+
 class RootInlineBox : public InlineFlowBox {
  public:
   explicit RootInlineBox(LineLayoutItem);
@@ -114,7 +116,8 @@ class RootInlineBox : public InlineFlowBox {
                            LayoutUnit block_right_edge,
                            LayoutUnit ellipsis_width,
                            LayoutUnit logical_left_offset,
-                           bool found_box);
+                           bool found_box,
+                           ForceEllipsisOnLine = DoNotForceEllipsis);
   // Return the position of the EllipsisBox or -1.
   LayoutUnit PlaceEllipsisBox(bool ltr,
                               LayoutUnit block_left_edge,
